--- a/popup.html
+++ b/popup.html
@@ -10,10 +10,11 @@
     <h2 id="msg">Hide</h2>
     <img id="img" src="./images/hidden.png" alt="Hide" style="width: 36px;">
   </div>
+  <hr>
   <div style="text-align: center">
     Contact me |<a href="https://mahmoud.ma/">mahmoud.ma</a>|
   </div>
-  <script src="popup.js"></script>
-</body>
 
+  <script src="assets/js/popup.js"></script>
+</body>
 </html>
