--- a/popup.html
+++ b/popup.html
@@ -2,18 +2,20 @@
 <html>
 
 <head>
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body style="width: 80px;">
-  <div id="state" style="text-align: center; margin-bottom:30px;cursor: pointer;">
-    <h2 id="msg">Hide</h2>
-    <img id="img" src="./images/hidden.png" alt="Hide" style="width: 36px;">
-  </div>
-  <hr>
-  <div style="text-align: center">
-    Contact me |<a href="https://mahmoud.ma/">mahmoud.ma</a>|
-  </div>
+<body>
+	<div id="state" style="text-align: center; margin-bottom:30px;cursor: pointer;">
+		<h2 id="msg">Hide</h2>
+		<img id="img" src="./images/hidden.png" alt="Hide" style="width: 36px;">
+	</div>
+	<hr>
+	<div style="text-align: center">
+		Contact me |<a href="https://mahmoud.ma/">mahmoud.ma</a>|
+	</div>
 
-  <script src="assets/js/popup.js"></script>
+	<script src="assets/js/popup.js"></script>
 </body>
+
 </html>
