--- a/popup.html
+++ b/popup.html
@@ -6,15 +6,18 @@
 </head>
 
 <body>
-	<div id="state" style="text-align: center; margin-bottom:30px;cursor: pointer;">
-		<h2 id="msg">Hide</h2>
-		<img id="img" src="./images/hidden.png" alt="Hide" style="width: 36px;">
-	</div>
-	<hr>
-	<div style="text-align: center">
-		Contact me |<a href="https://mahmoud.ma/">mahmoud.ma</a>|
+
+	<div>
+		<img src="assets/images/whatsapp_web_config128.png" alt="Icon" width="48">
+		<span class="color-orange">Whatsapp Web Config</span>
 	</div>
 
+	<!-- <div class=" container color-orange">
+		<img src="assets/images/whatsapp_web_config128.png" alt="Icon" width="48">
+		<h2 class="d-inline">
+			Whatsapp Web Config
+		</h2>
+	</div> -->
 	<script src="assets/js/popup.js"></script>
 </body>
 
