--- a/popup.html
+++ b/popup.html
@@ -1,24 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+	<title>Bootstrap Example</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+	<div class="container">
+		<div class="d-flex">
+			<div class="p-1">
+				<img src="assets/images/whatsapp_web_config128.png" alt="Icon" width="40" />
+			</div>
+			<div class="p-1">
+				<div class="row align-items-center h-100">
+					<div class="col">
+						<span class="h5 font-1 color-orange">Whatsapp Web Config</span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<hr class="hr">
+		<div class="row">
+			<div class="col-8 d-flex align-items-center justify-content-start">
+				<span class="h5 color-grey">Hide Sidebar</span>
+			</div>
+			<div class="col-4 d-flex align-items-center justify-content-end">
+				<label class="switch">
+					<input type="checkbox" id="check_hide" checked>
+					<span class="slider round"></span>
+				</label>
+			</div>
+		</div>
+		<div class="row mt-2">
+			<div class="col-8 d-flex align-items-center justify-content-start">
+				<span class="h5 color-grey">Blur contacts names</span>
+			</div>
+			<div class="col-4 d-flex align-items-center justify-content-end">
+				<label class="switch">
+					<input type="checkbox" id="check_blur_names" checked>
+					<span class="slider round"></span>
+				</label>
+			</div>
+		</div>
+		
+		<div class="row mt-2">
+			<div class="col-8 d-flex align-items-center justify-content-start">
+				<span class="h5 color-grey">Blur contacts photos</span>
+			</div>
+			<div class="col-4 d-flex align-items-center justify-content-end">
+				<label class="switch">
+					<input type="checkbox" id="check_blur_photos" checked>
+					<span class="slider round"></span>
+				</label>
+			</div>
+		</div>
 
-	<div>
-		<img src="assets/images/whatsapp_web_config128.png" alt="Icon" width="48">
-		<span class="color-orange">Whatsapp Web Config</span>
 	</div>
-
-	<!-- <div class=" container color-orange">
-		<img src="assets/images/whatsapp_web_config128.png" alt="Icon" width="48">
-		<h2 class="d-inline">
-			Whatsapp Web Config
-		</h2>
-	</div> -->
 	<script src="assets/js/popup.js"></script>
+	<script src="assets/js/execute.js"></script>
 </body>
 
 </html>
