--- a/popup.html
+++ b/popup.html
@@ -37,6 +37,17 @@
 		</div>
 		<div class="row mt-2">
 			<div class="col-8 d-flex align-items-center justify-content-start">
+				<span class="h5 color-grey"> Blur conversation messages</span>
+			</div>
+			<div class="col-4 d-flex align-items-center justify-content-end">
+				<label class="switch">
+					<input type="checkbox" id="check_blur_conversation_messages" checked>
+					<span class="slider round"></span>
+				</label>
+			</div>
+		</div>
+		<div class="row mt-2">
+			<div class="col-8 d-flex align-items-center justify-content-start">
 				<span class="h5 color-grey">Blur contacts names</span>
 			</div>
 			<div class="col-4 d-flex align-items-center justify-content-end">
@@ -46,7 +57,7 @@
 				</label>
 			</div>
 		</div>
-		
+
 		<div class="row mt-2">
 			<div class="col-8 d-flex align-items-center justify-content-start">
 				<span class="h5 color-grey">Blur contacts photos</span>
@@ -58,6 +69,18 @@
 				</label>
 			</div>
 		</div>
+		<div class="row mt-2">
+			<div class="col-8 d-flex align-items-center justify-content-start">
+				<span class="h5 color-grey"> Blur recent messages</span>
+			</div>
+			<div class="col-4 d-flex align-items-center justify-content-end">
+				<label class="switch">
+					<input type="checkbox" id="check_blur_recent_messages" checked>
+					<span class="slider round"></span>
+				</label>
+			</div>
+		</div>
+
 
 	</div>
 	<script src="assets/js/popup.js"></script>
