--- a/popup.html
+++ b/popup.html
@@ -37,6 +37,17 @@
 		</div>
 		<div class="row mt-2">
 			<div class="col-8 d-flex align-items-center justify-content-start">
+				<span class="h5 color-grey">Enable dark theme</span>
+			</div>
+			<div class="col-4 d-flex align-items-center justify-content-end">
+				<label class="switch">
+					<input type="checkbox" id="check_dark_theme" checked>
+					<span class="slider round"></span>
+				</label>
+			</div>
+		</div>
+		<div class="row mt-2">
+			<div class="col-8 d-flex align-items-center justify-content-start">
 				<span class="h5 color-grey"> Blur conversation messages</span>
 			</div>
 			<div class="col-4 d-flex align-items-center justify-content-end">
