Remove .DS_Store file

--- a/popup.html
+++ b/popup.html
@@ -10,20 +10,20 @@
 </head>
 
 <body>
-	<div class="container">
-		<div class="d-flex">
-			<div class="p-1">
-				<img src="assets/images/whatsapp_web_config128.png" alt="Icon" width="40" />
-			</div>
-			<div class="p-1">
-				<div class="row align-items-center h-100">
-					<div class="col">
-						<span class="h5 font-1 color-orange">Whatsapp Web Config</span>
-					</div>
+	<div class="d-flex">
+		<div class="p-1">
+			<img src="assets/images/whatsapp_web_config128.png" alt="Icon" width="40" />
+		</div>
+		<div class="p-1">
+			<div class="row align-items-center h-100">
+				<div class="col">
+					<span class="h5 font-1 color-orange">Whatsapp Web Config</span>
 				</div>
 			</div>
 		</div>
-		<hr class="hr">
+	</div>
+	<hr class="hr">
+	<div class="container">
 		<div class="row">
 			<div class="col-8 d-flex align-items-center justify-content-start">
 				<span class="h5 color-grey">Hide Sidebar</span>
@@ -91,8 +91,10 @@
 				</label>
 			</div>
 		</div>
-
-
+	</div>
+	<hr class="hr">
+	<div class="contact text-center color-grey ">
+		Mahmoud Zakaria <br><a href="http://www.mahmoud.ma" class="font-1" target="_blank">www.mahmoud.ma</a>
 	</div>
 	<script src="assets/js/popup.js"></script>
 	<script src="assets/js/execute.js"></script>
