--- a/options.html
+++ b/options.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=http://www.mahmoud.ma/" />
-  </head>
-  <body>
-    <div id="buttonDiv">
-    </div>
-    <div>
-      <p>Hide Whatsapp Sidebar</p>
-    </div>
-  </body>
+
+<head>
+  <meta http-equiv="refresh" content="0; url=https://github.com/ZakariaMahmoud/Whatsapp-Web-Config" />
+</head>
+
+<body>
+  <div>
+  </div>
+  <div>
+    <p>Whatsapp Web Config </p>
+  </div>
+</body>
+
 </html>
