--- a/popup.html
+++ b/popup.html
@@ -93,6 +93,18 @@
 		</div>
 	</div>
 	<hr class="hr">
+	<div class="container">
+		<div class="row mt-2" id="message">
+			<div class="col-8 d-flex align-items-center justify-content-start">
+				<span class="h5 color-grey">Blur</span>
+			</div>
+			<div class="col-4 d-flex align-items-center justify-content-end">
+				<input type="range" min="0" max="10" value="5" class="range" id="opacity">
+			</div>
+		</div>
+	</div>
+
+	<hr class="hr">
 	<div class="contact text-center color-grey ">
 		Mahmoud Zakaria <br><a href="http://www.mahmoud.ma" class="font-1" target="_blank">www.mahmoud.ma</a>
 	</div>
