change sync storage to local storage

--- a/popup.html
+++ b/popup.html
@@ -94,7 +94,7 @@
 	</div>
 	<hr class="hr">
 	<div class="container">
-		<div class="row mt-2" id="message">
+		<div class="row mt-2">
 			<div class="col-8 d-flex align-items-center justify-content-start">
 				<span class="h5 color-grey">Blur</span>
 			</div>
